--- a/cv.html
+++ b/cv.html
@@ -27,11 +27,11 @@
 		</div>
 
 		<div class="profile">
-			<img src="images/profilepic.jpg" class="profilepic" width="15%">
+			<img src="images/profilepic2.JPG" class="profilepic" width="15%">
 		</div>
 
 		<div class=introduction>
-			I am Shanel! An 18 year old Filipina designer majoring in Digital Media Design at Raffles Design Institute Shanghai. My creative experience ranges from graphic design, content planning, photo/video shoots, and post-production editing. I am always enthusiastic and focused in work.
+			I am Shanel! A 19 year old Filipina designer majoring in Digital Media Design at Raffles Design Institute Shanghai. My creative experience ranges from graphic design, content planning, photo/video shoots, and post-production editing. I am always enthusiastic and focused in work.
 		</div>
 	</div>
 </div>
@@ -45,25 +45,24 @@
 		<div class="designskills">
 			<div class=designskills_title><span class="highlight2">Design</span> Skills</div>
 			<ul class="designskills_list"> 
-				<li class=dskills>User Interaction design</li>
-				<li class=dskills>User Experience design</li>
+				<li class=dskills>Editorial</li>
+				<li class=dskills>Conceptual Design</li>
 				<li class=dskills>Branding design</li>
-				<li class=dskills>Graphic design</li>
+				<li class=dskills>UI/UX</li>
 				<li class=dskills>Video editing</li>
 				<li class=dskills>Web design</li>
-				<li class=dskills>Conceptual design</li>
 			</ul>
 		</div>
 
 		<div class="technicalskills">
 			<div class=technicalskills_title><span class="highlight2">Technical</span> Skills</div>
 			<ul class="technicalskills_list">
-				<li class=tskills>Illustrator</li>
 				<li class=tskills>Figma</li>
+				<li class=tskills>Illustrator</li>
 				<li class=tskills>Premiere Pro</li>
 				<li class=tskills>Photoshop</li>
-				<li class=tskills>InDesign</li>
 				<li class=tskills>After Effects</li>
+				<li class=tskills>InDesign</li>
 				<li class=tskills>HTML, CSS, JS</li>
 			</ul>
 		</div>
@@ -71,8 +70,8 @@
 		<div class="workskills">
 			<div class=workskills_title><span class="highlight2">Work</span> Skills</div>
 			<ul class="workskills_list">
-				<li class=wskills>Teamwork & Collaboration</li>
 				<li class=wskills>Flexibility</li>
+				<li class=wskills>Collaboration</li>
 				<li class=wskills>Time management</li>
 				<li class=wskills>Positive mindset</li>
 				<li class=wskills>Eagerness to learn</li>
@@ -92,8 +91,8 @@
 			<div class=experience_date-1>January-Present 2022</div>
 				<ul class="experience_list-1">
 					<li class=experience1>Content Planning</li>
-					<li class=experience1>Graphic Design</li>
 					<li class=experience1>Article Writing</li>
+					<li class=experience1>Article Research</li>
 				</ul>
 		</div>
 
@@ -102,8 +101,8 @@
 			<div class=experience_date-2>November 2021-Present</div>
 				<ul class="experience_list-2">
 					<li class=experience2>Logo design</li>
-					<li class=experience2>Brand Collateral design</li>
-					<li class=experience2>Visual direction</li>
+					<li class=experience2>Graphic Design</li>
+					<li class=experience2>Brand Collateral</li>
 				</ul>
 		</div>
 
