--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="feature-item__info">
       <div class="feature-item__container">
       <h2 class="feature-item__subtitle"></h2>
-      <h1 class="feature-item__title">Hi! I am Shanel. A 19 year old Filipina Designer based in Shanghai, China.</a></h1>
+      <h1 class="feature-item__title">Hi! I am Shanel. A 19 year old Filipina Designer based in Manila, Philippines.</a></h1>
       <div class="feature-item__description"></div>
      	</div>
     </div>
